--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "docxtemplater": "^3.31.3",
     "file-saver": "^2.0.5",
     "firebase": "^9.9.3",
+    "lodash-move": "^1.1.1",
     "pizzip": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-reorder": "^3.0.0-alpha.7",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
